--- a/.github/workflows/comment_bot.yml
+++ b/.github/workflows/comment_bot.yml
@@ -32,7 +32,7 @@ jobs:
     name: "Assign issue"
     permissions:
       issues: write
-    if: github.event.comment.body == 'take'
+    if: github.event.comment.body == '/take'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/github-script@v6
