--- a/protein_lm/configs/train/toy.yaml
+++ b/protein_lm/configs/train/toy.yaml
@@ -17,6 +17,9 @@ training_args:
   per_device_train_batch_size: 1
   save_steps: 1
   report_to: "none"
+  label_names:
+    - 'labels'
+  no_cuda: false
 
 # corresponds to TokenizerConfig
 tokenizer:
