--- a/.github/workflows/comment_bot.yml
+++ b/.github/workflows/comment_bot.yml
@@ -29,10 +29,10 @@ permissions:
 
 jobs:
   issue_assign:
-    name: "Assign issue"
+    name: "Auto-assign issue"
     permissions:
       issues: write
-    if: github.event.comment.body == '/take'
+    if: contains(github.event.comment.body, '/take')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/github-script@v6
