integrated alibi encoding + default_encoding is learned now

--- a/protein_lm/configs/train/toy_hf.yaml
+++ b/protein_lm/configs/train/toy_hf.yaml
@@ -30,7 +30,7 @@ model:
   nn_model_type: "APT"
   nn_model_config_args:
     attention_mode: "APT"
-    position_embedding: "rotary"
+    position_embedding: "learned"
   pretrained_checkpoint: null
 
 # corresponds to DataCollatorConfig
