rerope with unit tests for encodings plus rust & pytest dependency added in yml file

--- a/protein_lm.yml
+++ b/protein_lm.yml
@@ -9,7 +9,9 @@ dependencies:
   - numpy
   - pytorch
   - pydantic>=2.0
+  - rust
   - pip:
       - transformers
       - datasets
       - accelerate
+      - pytest
