--- a/protein_lm/configs/train/toy_localcsv.yaml
+++ b/protein_lm/configs/train/toy_localcsv.yaml
@@ -8,6 +8,9 @@ dataset:
   test_size: 10
   sequence_column_name: "sequence"
   max_sequence_length: 10
+  do_curriculum_learning: false
+  curriculum_learning_strategy: 'sequence_length'
+  curriculum_learning_column_name: 'sequence_length'
 
 # corresponds to HuggingFace's TrainingArguments
 training_arguments:
