--- a/protein_lm/configs/train/toy_hf.yaml
+++ b/protein_lm/configs/train/toy_hf.yaml
@@ -9,8 +9,14 @@ dataset:
   sequence_column_name: "sequence"
   max_sequence_length: 10
   do_curriculum_learning: false
-  curriculum_learning_strategy: 'sequence_length'
-  curriculum_learning_column_name: 'sequence_length'
+  curriculum_learning_strategy:
+    - 'sequence_length'
+    - 'ppl_category'
+    - 'plddt_category'
+  curriculum_learning_column_name:
+    - 'sequence_length'
+    - 'ppl_category_column' 
+    - 'plddt_category_column' 
 
 # corresponds to HuggingFace's TrainingArguments
 training_arguments:
