--- a/protein_lm_cuda.yml
+++ b/protein_lm_cuda.yml
@@ -6,14 +6,19 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python>=3.8
+  - python>=3.8,<3.11
   - numpy
   - scipy
   - cudatoolkit=11.7
   - pytorch-cuda=11.7
   - pydantic>=2.0
+  - wandb
   - rust
+  - biotite
+  - pyarrow
+  - pip
   - pip:
+      - cmake
       - transformers
       - datasets
       - accelerate
