Add continous value (plDDT and PPL) support for Curriculum Learning (#58)
Co-authored-by: Tianlai Chen <tc289@dcc-login-03.oit.duke.edu>
Co-authored-by: Tianlai Chen <tc289@dcc-login-02.oit.duke.edu>
Co-authored-by: Tianlai Chen <tc289@dcc-core-23.rc.duke.edu>

--- a/protein_lm/configs/train/toy_hf.yaml
+++ b/protein_lm/configs/train/toy_hf.yaml
@@ -9,8 +9,14 @@ dataset:
   sequence_column_name: "sequence"
   max_sequence_length: 10
   do_curriculum_learning: false
-  curriculum_learning_strategy: 'sequence_length'
-  curriculum_learning_column_name: 'sequence_length'
+  curriculum_learning_strategy:
+    - 'sequence_length'
+    - 'ppl'
+    - 'plddt'
+  curriculum_learning_column_name:
+    - 'sequence_length'
+    - 'ppl' 
+    - 'plddt' 
 
 # corresponds to HuggingFace's TrainingArguments
 training_arguments:
